--- a/docker_hub.opam
+++ b/docker_hub.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-synopsis: "EXPERIMENTAL"
+synopsis: "Library aiming to provide data from hub.docker.com"
 maintainer: "Kate <kit.ty.kate@disroot.org>"
 authors: "Kate <kit.ty.kate@disroot.org>"
 license: "MIT"
