--- a/docker_hub.opam
+++ b/docker_hub.opam
@@ -10,9 +10,10 @@ dev-repo: "git+https://github.com/kit-ty-kate/opam-docker-hub.git"
 doc: "https://kit-ty-kate.github.io/ocaml-docker-hub/"
 build: ["dune" "build" "-p" name "-j" jobs]
 depends: [
-  "ocaml" {>= "4.08"}
+  "ocaml" {>= "4.10"}
   "dune" {>= "2.0"}
+  "http-lwt-client" {>= "0.0.2"}
   "lwt"
   "lwt_ppx"
-  "yojson"
+  "yojson" {>= "1.6.0"}
 ]
