--- a/docker_hub.opam
+++ b/docker_hub.opam
@@ -13,7 +13,6 @@ depends: [
   "ocaml" {>= "4.10"}
   "dune" {>= "2.0"}
   "http-lwt-client" {>= "0.2.0"}
-  "lwt"
-  "lwt_ppx"
+  "lwt" {>= "2.0.0"}
   "yojson" {>= "1.6.0"}
 ]
