--- a/docker_hub.opam
+++ b/docker_hub.opam
@@ -1,8 +1,8 @@
 opam-version: "2.0"
-version: "0.1.1"
+version: "0.2.0"
 synopsis: "Library aiming to provide data from hub.docker.com"
-maintainer: "Kate <kit.ty.kate@disroot.org>"
-authors: "Kate <kit.ty.kate@disroot.org>"
+maintainer: "Kate <kit-ty-kate@outlook.com>"
+authors: "Kate <kit-ty-kate@outlook.com>"
 license: "MIT"
 homepage: "https://github.com/kit-ty-kate/ocaml-docker-hub"
 bug-reports: "https://github.com/kit-ty-kate/ocaml-docker-hub/issues"
